crates/plotnik-lib/tests/snapshots/conformance__anchored_star_follower_match_path.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)* @b . (expression_statement (identifier == "foo")) @c})

==== source ====
let x; debugger; debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
  c: Node;
}

==== result ====
{"a":{"kind":"lexical_declaration","text":"let x;","span":[0, 6]},"b":[{"kind":"debugger_statement","text":"debugger;","span":[7, 16]},{"kind":"debugger_statement","text":"debugger;","span":[17, 26]}],"c":{"kind":"expression_statement","text":"foo;","span":[27, 31]}}
