crates/plotnik-lib/tests/snapshots/conformance__anchored_star_follower_skip_path_match.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement)* @b . (expression_statement (identifier == "foo")) @c})

==== source ====
debugger; debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
  c: Node;
}

==== result ====
{"a":null,"b":[{"kind":"debugger_statement","text":"debugger;","span":[0, 9]},{"kind":"debugger_statement","text":"debugger;","span":[10, 19]}],"c":{"kind":"expression_statement","text":"foo;","span":[20, 24]}}
