crates/plotnik-lib/tests/snapshots/conformance__anchored_strict_quantified_follower_rejects_comment.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a .! (debugger_statement)* @b . (expression_statement (identifier == "foo")) @c})

==== source ====
/* c */ debugger; foo;

==== types ====
export interface Q {
  a: Node | null;
  b: Node[];
  c: Node;
}

==== result ====
<no match>
