crates/plotnik-lib/tests/snapshots/conformance__captured_ref_keeps_match_across_ascension.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
A = (lexical_declaration)
Q = (program (A) @a)

==== source ====
let x;

==== types ====
export interface Q {
  a: Node;
}

export type A = undefined;

==== result ====
{"a":{"kind":"lexical_declaration","text":"let x;","span":[0, 6]}}
