crates/plotnik-lib/tests/snapshots/conformance__captured_ref_via_non_greedy_optional_skip.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
A = (identifier)??
Q = (A) @x

==== source ====
foo

==== types ====
export interface Q {
  x: Node;
}

export type A = undefined;

==== result ====
{"x":{"kind":"program","text":"foo","span":[0, 3]}}
