crates/plotnik-lib/tests/snapshots/conformance__captured_ref_via_optional_skip_through_descent.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
A = (identifier)??
Q = (program (A) @x)

==== source ====
foo

==== types ====
export interface Q {
  x: Node;
}

export type A = undefined;

==== result ====
<no match>
