crates/plotnik-lib/tests/snapshots/conformance__collapse_prefix_drops_referenced_instruction.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (comment)? (comment)? (comment)?)

==== source ====
// c

==== types ====
export type Q = undefined;

==== result ====
null
