crates/plotnik-lib/tests/snapshots/conformance__explicit_comment_pattern_matches_before_skip_policy.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(comment) @doc . (function_declaration) @fn})

==== source ====
// doc
function f() {}

==== types ====
export interface Q {
  doc: Node;
  fn: Node;
}

==== result ====
{"doc":{"kind":"comment","text":"// doc","span":[0, 6]},"fn":{"kind":"function_declaration","text":"function f() {}","span":[7, 22]}}
