crates/plotnik-lib/tests/snapshots/conformance__field_def_capture_nests.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Name = (identifier) @text
Q = (program (function_declaration name: (Name) @fn))

==== source ====
function foo(){}

==== types ====
export interface Name {
  text: Node;
}

export interface Q {
  fn: Name;
}

==== result ====
{"fn":{"text":{"kind":"identifier","text":"foo","span":[9, 12]}}}
