crates/plotnik-lib/tests/snapshots/conformance__greedy_quantifier_exit_binds_following_leftmost.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)* @decls (_) @x})

==== source ====
let a; foo; bar;

==== types ====
export interface Q {
  decls: Node[];
  x: Node;
}

==== result ====
{"decls":[{"kind":"lexical_declaration","text":"let a;","span":[0, 6]}],"x":{"kind":"expression_statement","text":"foo;","span":[7, 11]}}
