crates/plotnik-lib/tests/snapshots/conformance__interior_anchor_ignored_with_trailing_anchor.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)? @a . (debugger_statement) @b .})

==== source ====
foo; debugger;

==== types ====
export interface Q {
  a: Node | null;
  b: Node;
}

==== result ====
{"a":null,"b":{"kind":"debugger_statement","text":"debugger;","span":[5, 14]}}
